testsuite/tests/typecheck/should_compile/T20588d_aux.hs
module T20588d_aux where

import {-# SOURCE #-} T20588d

