testsuite/tests/typecheck/should_fail/T3468a.hs
module T3468a where

import {-# SOURCE #-} T3468
